--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services: 
     server:
+        restart: always
         container_name: GP_SERVER
         build: .
         ports: 
